# confia

./: .dockerignore  .env.example  .gcloudignore  .gitignore  BACKEND_CONNECTION.md  CODEX_PROMPT.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  alembic.ini  main.py  pyproject.toml  receipt_storage.py
alembic/: env.py
alembic/versions/: 20260720_0001_initial_schema.py  20260720_0002_add_external_id_to_users.py  20260721_0002_receipt_storage.py  20260721_0003_add_proactive_insights.py  20260721_0004_default_transactions_without_receipt.py  20260721_0005_add_profile_currency.py
frontend/: .dockerignore  .gcloudignore  Dockerfile  cloudbuild.yaml  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-hub/: page.tsx
frontend/app/ajustes/: page.tsx
frontend/app/analitica/: page.tsx
frontend/app/historial/: page.tsx
frontend/app/home/: page.tsx
frontend/components/: BarChart.tsx  BottomNav.tsx  DonutChart.tsx  EditTransactionModal.tsx  FixedExpensesEditor.tsx  LanguageProvider.tsx  ProactiveBrief.tsx  QuickAddModal.tsx  TrustScoreBreakdownModal.tsx
frontend/lib/: api.ts
stitch/ai-smart-finance-home/: DESIGN.md  index.html
stitch/ai-smart-finance-home/02-onboarding/: screen.html
stitch/ai-smart-finance-home/03-historial/: screen.html
stitch/ai-smart-finance-home/04-ai-hub/: screen.html
stitch/ai-smart-finance-home/05-home/: screen.html
stitch/ai-smart-finance-home/06-analitica/: screen.html
stitch/editar-movimiento-v2/: index.html
stitch/home-v2/: index.html
stitch/onboarding-v2/: index.html
